feat: add addon-storysource

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@lwc/compiler": "^1.0.0",
     "@lwc/engine": "^1.0.0",
     "@storybook/addon-knobs": "^5.1.11",
+    "@storybook/addon-storysource": "^5.1.11",
     "@storybook/addons": "^5.1.11",
     "@storybook/html": "^5.1.11",
     "@types/node": "^12.0.1",
