--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
     "@types/node": "^12.0.1",
     "@types/webpack": "^4.4.31",
     "babel-loader": "^8.0.6",
-    "lwc-webpack-plugin": "^0.2.0",
     "typescript": "^3.4.5",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7"
   },
   "dependencies": {
     "@salesforce-ux/design-system": "3.0.0-alpha-5",
-    "classnames": "^2.2.6"
+    "classnames": "^2.2.6",
+    "lwc-webpack-plugin": "davidturissini/lwc-webpack-plugin#pull/1/head"
   },
   "scripts": {
-    "storybook": "start-storybook -s ./static -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "build-plugin": "cd node_modules/lwc-webpack-plugin && yarn build",
+    "hack-slds": "node hack-slds-imports.js",
+    "postinstall": "yarn build-plugin && yarn hack-slds"
   }
 }
