--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
     "@storybook/addon-storysource": "^5.1.11",
     "@storybook/addons": "^5.1.11",
     "@storybook/html": "^5.2.1",
-    "lwc-webpack-plugin": "^0.2.0",
-    "typescript": "^3.4.5",
-    "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.7"
+    "lwc-webpack-plugin": "^0.2.0"
   },
   "dependencies": {
     "@salesforce-ux/design-system": "^3.0.0-alpha.7",
