--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
   "devDependencies": {
     "@salesforce-ux/design-system": "^3.0.0-alpha.7",
     "@storybook/html": "^5.2.1",
-    "lwc-webpack-plugin": "^0.2.0"
+    "lwc-webpack-plugin": "^0.2.0",
+    "webpack-cli": "^3.3.9"
   },
   "dependencies": {
     "@lwc/engine": "^1.0.2-222.18"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "build": "webpack"
   }
 }
