--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "devDependencies": {
     "@salesforce-ux/design-system": "^3.0.0-alpha.7",
     "@storybook/html": "^5.2.1",
+    "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
     "lwc-webpack-plugin": "^0.2.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
