--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
+    "s": "yarn storybook",
     "build-storybook": "build-storybook",
     "build": "webpack"
   }
