--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
     "@salesforce-ux/design-system": "^3.0.0-alpha.7",
     "@salesforce/eslint-config-lwc": "^0.4.0",
     "@storybook/html": "^5.2.1",
+    "@types/lodash": "^4.14.142",
     "@typescript-eslint/eslint-plugin": "^2.3.3",
     "@typescript-eslint/parser": "^2.3.3",
     "css-loader": "^3.2.0",
     "eslint": "^6.5.1",
     "file-loader": "^4.2.0",
     "lwc-webpack-plugin": "^0.2.0",
+    "ts-loader": "^6.2.0",
     "typescript": "^3.6.3",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
   },
   "dependencies": {
-    "@lwc/engine": "^1.0.2-222.18",
+    "@lwc/synthetic-shadow": "^1.1.0",
+    "lodash": "^4.17.15",
     "lwc": "^1.1.0"
   },
   "scripts": {
