--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@salesforce-ux/design-system": "^3.0.0-alpha.7",
     "@salesforce/eslint-config-lwc": "^0.4.0",
     "@storybook/html": "^5.2.1",
+    "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.142",
     "@typescript-eslint/eslint-plugin": "^2.3.3",
     "@typescript-eslint/parser": "^2.3.3",
     "css-loader": "^3.2.0",
     "eslint": "^6.5.1",
     "file-loader": "^4.2.0",
+    "jest": "^24.9.0",
+    "lwc-services": "^1.3.4",
     "lwc-webpack-plugin": "^0.2.0",
     "ts-loader": "^6.2.0",
     "typescript": "^3.6.3",
@@ -27,11 +30,15 @@
     "lwc": "^1.1.0"
   },
   "scripts": {
-    "storybook": "start-storybook -p 6006",
-    "s": "yarn storybook",
-    "build-storybook": "build-storybook",
+    "all": "yarn format && yarn type-check && yarn lint && yarn test && yarn build && yarn build-storybook",
     "build": "webpack",
-    "lint": "npx eslint ./src/**/*.ts",
+    "build-storybook": "build-storybook",
+    "coverage": "open coverage/lcov-report/index.html",
+    "format": "prettier --write \"./src/**/*\"",
+    "lint": "npx eslint ./src/**/*.{ts,js}",
+    "s": "yarn storybook",
+    "storybook": "start-storybook -p 6006",
+    "test": "lwc-services test:unit",
     "type-check": "npx tsc --noEmit"
   }
 }
