--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "build-storybook": "build-storybook",
     "coverage": "open coverage/lcov-report/index.html",
     "format": "prettier --write \"./src/**/*\"",
-    "heroku-postbuild": "[ $CI <> true ] && yarn build || build-storybook",
+    "heroku-postbuild": "build-storybook",
     "lint": "npx eslint ./src/**/*.{ts,js}",
     "s": "yarn storybook",
     "storybook": "start-storybook -p 6006",
