--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@lwc/engine": "^1.0.0",
     "@storybook/addon-knobs": "^5.1.11",
     "@storybook/addon-storysource": "^5.1.11",
+    "@storybook/addon-viewport": "^5.2.6",
     "@storybook/addons": "^5.1.11",
     "@storybook/html": "^5.1.11",
     "@types/node": "^12.0.1",
